# pyng

./: .gitignore  CMakeLists.txt  README.md  SpiceEngine.cpp  SpiceEngine.hpp  build_and_run.sh  engine.cpp  engine.hpp  environment.yml  main.cpp  montecarlo.cpp  montecarlo.hpp  plotstuff.py  python_external.cpp  run_python.sh  smoketest_pyng.py  update_conda.sh
